# servant-file-upload

./: LICENSE  stack.yaml
ghcjs-servant-file-upload-client/: ghcjs-servant-file-upload-client.cabal
ghcjs-servant-file-upload-client/src/Servant/FileUpload/: Client.hs
servant-file-upload/: servant-file-upload.cabal
servant-file-upload-client/: servant-file-upload-client.cabal  stack.yaml
servant-file-upload-client/src/Servant/FileUpload/: Client.hs
servant-file-upload-client/src/Servant/FileUpload/Client/: GHC.hs  GHCJS.hs
servant-file-upload-server/: servant-file-upload-server.cabal
servant-file-upload-server/src/Servant/FileUpload/: Server.hs
servant-file-upload/src/Servant/FileUpload/: API.hs  Internal.hs
