name:                servant-file-upload-client
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/rimmington/servant-file-upload#readme
license:             BSD3
license-file:        ../LICENSE
maintainer:          Rhys <rhysadams@swin.edu.au>
copyright:           (c) Swinburne Software Innovation Lab 2015
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.FileUpload.Client
  build-depends:       base >= 4.7 && < 5
                     , servant-file-upload
                     , servant
                     , servant-client
  default-language:    Haskell2010
  ghc-options:         -Wall

  if impl(ghcjs)
    build-depends:     ghcjs-base
                     , deepseq
                     , aeson
                     , bytestring
                     , text
    cpp-options:       -DOnGhcjs
    other-modules:     Servant.FileUpload.Client.GHCJS
  else
    other-modules:     Servant.FileUpload.Client.GHC

source-repository head
  type:     git
  location: https://github.com/rimmington/servant-file-upload
